# PresentRepo

./: README.md
Algorithms/: task_2
Algorithms/1sem/ДЗ5/: 5.py  file.txt  test.py  МатОжидание.txt  РЦ5_4.py
Algorithms/1sem/КР1/: 35.txt
Algorithms/1sem/КР2/: 35-vars.txt
Algorithms/1sem/Лаба/: 1A_Sort.py  1B_CountInvertions.py  1C_Honney.py  2A_Olimp.py  2B_StyleClothes.py  2C_СбалансированнаяКоманда.py  2D_StyleClothes.py  2E_MergeForever.py  2F.py  3A_RegularStack.py  3B_SimpleQueue.py  4A_ПрефиксныеСуммы.py  4B_МаксСумма.py  4C_LandayskoeMigration.py  4D_QueueMaxMin.py  4E_minWindow.py  4F_Histogramm.py  4H_Catan2.py  5A_КоровыСтойла.py  5D_BinSearch.py  5E_BinS_LeftRight.py  5H.py  7A_Unichtozhenie.py  7B_graph.py  7С_Alice.py  8A_rabbit.py  8B_simple_kuznechik.py  8C_kuznechik_k.py  8D_smooth_numbers.py  8E_messeges.py  8F_MUS.py  8G_turtle.py  8Horse_prrrr_ehoho.py  8J_gvozdi.py  8J_gvozdi_right.py  8L_ticketsInOneHand.py  8M_numbersLikeDM.py  8O_stringToString.py  8P_backpack.py  8Q_backpackLessItems.py  (+2 more)
Algorithms/2sem/Laba_1/: 1.py  2.py  5_amount_nvp.cpp  7.py  Java11.java  Java5.java  Java6.java  Java8.java  Java9.java  (+3 more)
Algorithms/2sem/Pr_Clion/: 7_BFF  7_BFF.cpp  BU_task_2.txt  CMakeLists.txt  HW_2_pattern  Stars_5  Stars_5.cpp  launch.bat  num8  task_2  task_2.cpp  task_3_swapper_already_dead  task_3_swapper_already_dead.cpp  task_4_kill_me  task_4_kill_me.cpp  test
C_Cpp/Clion_Lab2/: RBTree.c  RBTree.h  errorCodes.h  mainRNB.c  utils.c  utils.h
C_Cpp/Clion_hw4/: MyContainer.hpp  make_looper.cpp
C_Cpp/Clion_lab4/: MyContainer.hpp  test.cpp
(+251 files in other folders)
